--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*   
 Theme Name: Web-kumpel.de Bootstrap Theme
 Theme URI: https://www.web-kumpel.de
+Github Theme URI: ozcoe/wp-web-kumpel-theme
 Text Domain: wpbootstrap
 Description: A wordpress bootstrap theme for beginners and experts.
 Author: Ozan Cörüt
-Author URI: <AUTHOR_URI>
-Version: 1.0
+Author URI: https://www.web-kumpel.de
+Version: 1.0.0
 */
 html {
     min-height:100%;
